# opswiki-demo

./: .env.example  README.md  main.py  pyproject.toml
app/: api.py  config.py  indexing.py  ingest.py  qa.py  retrieval.py  schemas.py
app/frontend/static/: app.js  style.css
app/frontend/templates/: index.html
