[project]
name = "opswiki"
version = "0.1.0"
description = "DeepWiki-style local code repository understanding & QA system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "faiss-cpu>=1.9.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "orjson>=3.10.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.1.0",
    "markdown-it-py>=3.0.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]
local-reranker = ["sentence-transformers>=3.0.0"]

[tool.ruff]
line-length = 100
target-version = "py311"
